--- a/PocketMeals/Storyboards/Base.lproj/Main.storyboard
+++ b/PocketMeals/Storyboards/Base.lproj/Main.storyboard
@@ -278,6 +278,12 @@
                                     <action selector="favoriteTapped:" destination="9Y2-WN-XDb" eventType="touchUpInside" id="deZ-kH-0sF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWw-cN-yuy">
+                                <rect key="frame" x="0.0" y="20" width="30" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="←"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -317,12 +323,14 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Yqe-X2-N5P" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YYJ-pw-uTd">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="9Sk-Pt-Wf5"/>
                         <segue destination="vec-2G-SWc" kind="relationship" relationship="viewControllers" id="yzP-TH-Sb5"/>
+                        <segue destination="vec-2G-SWc" kind="show" identifier="showFavorites" id="ixF-y1-Uhh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q3v-cd-MGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -335,5 +343,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="dql-gV-RSZ"/>
+        <segue reference="ixF-y1-Uhh"/>
     </inferredMetricsTieBreakers>
 </document>
